Complete bootstrap asset pipeline

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-	"name": "decorativegourdseason.com",
-	"homepage": "http://www.decorativegourdseason.com",
+	"name": "Condi",
+	"homepage": "",
 	"authors": [
 		"M. W. Delaney"
 	],
