--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-	"name": "Condi",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"dependencies": {
-		"del": "^2.2.2",
-		"main-bower-files": "^2.13.1"
-	},
-	"devDependencies": {
-		"gulp": "^3.9.1",
-		"gulp-concat": "^2.6.0",
-		"gulp-sass": "^2.3.1",
-		"gulp-uglify": "^1.2.0",
-		"gulp-imagemin": "^3.0.3",
-		"main-bower-files": "^2.13.1",
-		"run-sequence": "^1.2.0",
-		"wiredep": "^4.0.0"
-	},
-	"scripts": {
-		"test": "mocha"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/MWDelaney/condi.git"
-	},
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/MWDelaney/condi/issues"
-	},
-	"homepage": "https://github.com/MWDelaney/condi#readme"
+  "name": "Condi",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "dependencies": {
+    "del": "^2.2.2",
+    "main-bower-files": "^2.13.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-flatten": "^0.3.1",
+    "gulp-imagemin": "^3.0.3",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.2.0",
+    "main-bower-files": "^2.13.1",
+    "run-sequence": "^1.2.0",
+    "wiredep": "^4.0.0"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MWDelaney/condi.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MWDelaney/condi/issues"
+  },
+  "homepage": "https://github.com/MWDelaney/condi#readme"
 }
